--- a/popdata/sass/header.scss
+++ b/popdata/sass/header.scss
@@ -28,9 +28,23 @@
   user-select: none;
 }
 
+//global classes
+.hidden {
+  display: none;
+}
+.noSelect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+
 //CSS
 
-body{
+body {  
   width: 80%;
   margin-left: auto;
   margin-right: auto;
@@ -40,76 +54,214 @@ body{
 
 //header and login buttons
 header {
-  max-height: 120px;
-  border: 2px solid;
-  border-radius: 5px;
+  position: relative;
+  height: 90px;
+  @include background(linear-gradient(#008ADD, #00559B));
+  background-repeat:no-repeat;
+  border: 2px solid white;
+  border-radius: 5px; 
+  margin: 20px 0 0;
+
+  .whitebox {
+    position: absolute;
+    right: 0px;
+    left: 205px;
+    margin: 2px 2px 0;
+    height: 86px;
+    background: white;
+
+    div {
+      display: inline-block;
+      position: absolute;
+      width: 160px;
+      height: 40px;
+      top: 0px;
+      right: 0px;
+      text-align: right;        
+      a {
+        text-decoration: none;
+        position: relative;
+        display: inline-block;
+        margin: 0 0 0 -6px;       
+        padding: 10px;     
+        @include popfont;
+        color: #0793a7;
+        text-shadow: 1px 2px 8px #7796b4;
+        font-size: 16px;      
+        @include noSelect;
+      }
+      a:hover {
+        color: #70d8ee;
+        cursor: pointer;
+      }      
+      a:active {
+        color: white;
+        background: #70d8ee;
+      }
+      .loginbtnclicked {
+        color: white;
+        background: #70d8ee;
+      }
+      p {        
+        margin: 0 -69px 0;
+        display: inline;
+        color: orange;
+        @include popfont;
+        font-size: 18px;
+        @include noSelect;
+        cursor: none;
+
+      }
+
+    }
+  }
+  
 }   
 
-#logo{
-  width: 218px;
-  height: 116px;
-  @include background(linear-gradient(#004875, #00223f));
-  background-repeat:no-repeat;
-  margin: 0;     
-  border: 2px solid;
-  border-right: 3px solid;
-  @include border-left-radius(5x);
-  border-color: #0d6681;
-}
 
-#loginp {
-  color: orange;
-  display: inline;
-  float: right;
-  @include popfont;
-  font-size: 18px;
-  margin: 6px -3px 0;
-  @include noSelect;
-  cursor: none;
-}
 
-label.loginbtns{
-  display: inline;
-  float: right;
-  margin: 1px 0px;
-  @include popfont;
-  color: #0793a7;
-  text-shadow: 1px 2px 8px #7796b4;
-  font-size: 16px;
-  padding: 8px;
-  @include noSelect;
-  
-}
-
-label.loginbtns:hover{
-  color: #70d8ee;
-  cursor: pointer;
-}
-
-input[type=radio] {
-  display:none;
+#logo {
+  position: absolute;
+  bottom: -7px;
+  left: -6px;
 }
 
 //popuplogin
 
 .logbox {
-  display: none;
-  width: 50%;
-  height: 30%;
-  min-width: 400px;
-  min-height: 400px;
-  position: absolute;
+  width: 400px;
+  height: 300px;
+  position: fixed;
   top: 50%;
-  left: 50%;
+  left: 50%;  
+  background: white;
+  box-shadow: 10px 10px 5px #888888;
   @include translate(-50%, -50%);
- 
-  @include background(linear-gradient(#004875, #00223f));
+  @include popfont;
+  letter-spacing: 1px;
+  padding: 5px 20px;
+  z-index: 9;
+  h2 {
+    font-size: 15px;
+    color: #202020;    
+    padding: 0 0 8px 0;
+    border-bottom: 2px solid #DFDFDF;
+  }
+
+  label {    
+    color:  #2E2E2E;
+  }
+
+  .loginlabel {
+    display: inline-block;
+    font-size: 16px;
+    width: 80px;
+  }
+
+  input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px #DDF9F9 inset;
+  }
+
+  .logininput {
+    display: inline-block;
+    letter-spacing: 1px;
+    font-size: 16px;
+    height: 32px;
+    width: 286.5px;
+    border-top: 1px solid #C9C9C9;
+    border-left: 1px solid #BEBEBE;
+    padding: 0 10px;
+    margin: 5px 0 0 5px;
+  }
+  
+  .checkbox {
+    display: inline-block;
+    margin: 7px 0 0 65px; 
+    input {
+      display: inline-block;   
+      position: relative;
+      top: 1px
+    }
+    label {  
+      letter-spacing: normal;
+      font-size: 13px;
+      padding: 7px 0;
+      border-radius: 5px;
+    }
+  }
+
+  .checkbox:hover {
+    label{
+      background: #FCE383;
+    }
+    
+  }
+
+  .popuplinks {
+    margin: 0 0 0 35px;
+    display: inline-block;
+    font-size: 11px;
+    letter-spacing: normal;
+    @include popfont;
+    cursor: default;
+    color: #8B8B8B;
+    a {
+      text-decoration: none;
+      color: #8B8B8B;
+    }
+  }
+
+  #loginsubmit {    
+  display: inline-block;
+  width: 120px;
+  height: 32px;
+  background: #0D65A6;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 10px;
+  border: none;
+  margin: 12px 85px;;
+  }
+
+  
+
+  #loginfooter {
+    position: absolute;
+    height: 80px;
+    width: 100%;
+    bottom: 0px;
+    margin: 0 -20px;
+    p {
+    display: inline-block;
+    margin: 30px 20px 0 90px;
+    }
+
+    color: #4a66a0;
+    background: #e9eaed;
+    .fb-login-button {
+        display: inline;
+        position: relative;
+        left: 0px;
+        top: 0px;
+    } 
+  }
+
 }
 
-#login:checked ~ .logbox {
-  display: block;
-}
-  
+.mask {
+  @include noSelect;
+  display: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: fixed;
+  z-index: 1;
+  background: #72A7E7;
+  opacity: 0.4;
+} 
 
 
 
